components/base-css/src/_utility-classes.scss
/* ... */
.bg-gray-500 {
  background-color: var(--gray-500) !important;
}
.bg-gray-500-hover:hover {
  background-color: var(--gray-500) !important;
}
.bg-gray-600 {
  background-color: var(--gray-600) !important;
}
.bg-gray-600-hover:hover {
  background-color: var(--gray-600) !important;
}
.bg-gray-700 {
  background-color: var(--gray-700) !important;
}
.bg-gray-700-hover:hover {
  background-color: var(--gray-700) !important;
}
.bg-gray-800 {
  background-color: var(--gray-800) !important;
}
.bg-gray-800-hover:hover {
  background-color: var(--gray-800) !important;
}
.bg-gray-900 {
  background-color: var(--gray-900) !important;
}
.bg-gray-900-hover:hover {
  background-color: var(--gray-900) !important;
}
.bg-black {
  background-color: var(--black) !important;
}
.bg-black-hover:hover {
  background-color: var(--black) !important;
}
.bg-white {
  background-color: var(--white) !important;
}
.bg-white-hover:hover {
  background-color: var(--white) !important;
}

.mb-2,
.cagov-mb-2 {
  margin-bottom: 2rem;
}
.border {
  border: solid 1px;
}
.cluster .sp-bt {
  justify-content: space-between;
}
.fb-500 {
  flex-basis: 500px !important;
}
.visually-hidden {
  position: absolute !important;
  overflow: hidden !important;
  clip: rect(0, 0, 0, 0) !important;
  width: 1px !important;
  height: 1px !important;
  margin: -1px !important;
  padding: 0 !important;
  white-space: nowrap !important;
  border: 0 !important;
}
/* positions */
.position-sticky {
  position: sticky !important;
}
.position-relative {
  position: relative !important;
}
.position-absolute {
  position: absolute !important;
}
.position-fixed {
  position: fixed !important;
}
/* displays */
.d-none {
  display: none !important;
}
.d-inline {
  display: inline !important;
}
.d-block {
  display: block !important;
}
.d-inline-block {
  display: inline-block !important;
}
.d-grid {
  display: grid !important;
}
.d-flex {
  display: flex !important;
}
.d-inline-flex {
  display: inline-flex !important;
}

/* width classes */
.w-100 {
  width: 100% !important;
}
.w-auto {
  width: auto;
}

/* height classes */
.h-100 {
  height: 100% !important;
}
.h-auto {
  height: auto;
}

/* FLEX UTILITY CLASSES */
.flex-column {
  flex-direction: column !important;
}
.flex-column-reverse {
  flex-direction: column-reverse !important;
}
.flex-row {
  flex-direction: row !important;
}
.flex-row-reverse {
  flex-direction: row-reverse !important;
}
.flex-grow-0 {
  flex-grow: 0 !important;
}
.flex-grow-1 {
  flex-grow: 1 !important;
}
.flex-shrink-0 {
  flex-shrink: 0 !important;
}
.flex-shrink-1 {
  flex-shrink: 1 !important;
}
.flex-wrap {
  flex-wrap: wrap !important;
}
.flex-nowrap {
  flex-wrap: nowrap !important;
}
.gap-0 {
  gap: 0 !important;
}
.gap-1 {
  gap: var(--s-sm) !important;
}
.gap-2 {
  gap: var(--s-1) !important;
}
.gap-3 {
  gap: var(--s-2) !important;
}
.gap-4 {
  gap: var(--s-3) !important;
}
.gap-5 {
  gap: var(--s-5) !important;
}
.justify-content-start {
  justify-content: flex-start !important;
}
.justify-content-end {
  justify-content: flex-end !important;
}
.justify-content-center {
  justify-content: center !important;
}
.justify-content-between {
  justify-content: space-between !important;
}
.justify-content-around {
  justify-content: space-around !important;
}
.justify-content-evenly {
  justify-content: space-evenly !important;
}
.align-items-start {
  align-items: flex-start !important;
}
.align-items-end {
  align-items: flex-end !important;
}
.align-items-center {
  align-items: center !important;
}
.align-items-baseline {
  align-items: baseline !important;
}
.align-items-stretch {
  align-items: stretch !important;
}
.align-content-start {
  align-content: flex-start !important;
}
.align-content-end {
  align-content: flex-end !important;
}
.align-content-center {
  align-content: center !important;
}
.align-content-between {
  align-content: space-between !important;
}
.align-content-around {
  align-content: space-around !important;
}
.align-content-stretch {
  align-content: stretch !important;
}
.align-self-auto {
  align-self: auto !important;
}
.align-self-start {
  align-self: flex-start !important;
}
.align-self-end {
  align-self: flex-end !important;
}
.align-self-center {
  align-self: center !important;
}
.align-self-baseline {
  align-self: baseline !important;
}
.align-self-stretch {
  align-self: stretch !important;
}

/* TEXT */
.text-center {
  text-align: center !important;
}
.text-left {
  text-align: left !important;
}
.text-right {
  text-align: right !important;
}
.text-uppercase {
  text-transform: uppercase !important;
}
.text-lovercase {
  text-transform: lowercase !important;
}
.font-size-xs {
  font-size: var(--font-size-xs) !important;
}
.font-size-sm {
  font-size: var(--font-size-sm) !important;
}
.font-size-1 {
  font-size: var(--font-size-1) !important;
}
.font-size-2 {
  font-size: var(--font-size-2) !important;
}
.font-size-3 {
  font-size: var(--font-size-3) !important;
}
.font-size-4 {
  font-size: var(--font-size-4) !important;
}
.font-size-5 {
  font-size: var(--font-size-5) !important;
}
.font-size-6 {
  font-size: var(--font-size-6) !important;
}
.font-size-7 {
  font-size: var(--font-size-7) !important;
}
.font-size-8 {
  font-size: var(--font-size-8) !important;
}
.font-size-9 {
  font-size: var(--font-size-9) !important;
}
.font-size-10 {
  font-size: var(--font-size-10) !important;
}
.font-size-11 {
  font-size: var(--font-size-11) !important;
}
.font-size-12 {
  font-size: var(--font-size-12) !important;
}

.underline {
  text-decoration: underline !important;
}
.no-underline {
  text-decoration: none !important;
}

/* IMAGE */
.img-fluid {
  max-width: 100%;
  height: auto;
  display: inline-block;
}

/* every-layout.dev layout classes */
.stack * + * {
  margin-top: 1.5rem;
}

